--- a/doc/06-References.bib
+++ b/doc/06-References.bib
@@ -505,3 +505,14 @@
   year={2013},
   publisher={Birkh{\"a}user Boston}
 }
+
+@book{hilbert2004david,
+  title={David Hilbert's lectures on the foundations of mathematics and physics, 1891-1933},
+  author={Hilbert, D. and Ewald, W. and Hallett, M. and Majer, U. and Sieg, W.},
+  number={v. 5},
+  lccn={2004103355},
+  series={David Hilbert's lectures on the foundations of mathematics and physics, 1891-1933},
+  url={https://books.google.com/books?id=ooP9zAEACAAJ},
+  year={2004},
+  publisher={Springer}
+}
