--- a/doc/02-Related-Work.tex
+++ b/doc/02-Related-Work.tex
@@ -2,10 +2,10 @@
 
 Peano was the first to discover the first space filling curve, with Hilbert later discovering
 a space filling curve that we concern ourselves with in this paper \cite{hilbert2004david}
-Hilbert's curve takes a one dimensional line and maps it to a compact, connnected and locally connected
+Hilbert's curve takes a one dimensional line and maps it to a compact, connected and locally connected
 set.
 For an introduction to space filling curves in addition to the necessary and sufficient
-conditions for a space filling curve, the reader is refered to Sagan \cite{sagan_1994}.
+conditions for a space filling curve, the reader is referred to Sagan \cite{sagan_1994}.
 
 As an artifact of the construction scheme, the Hilbert curve requires the side lengths to be exact powers of two.
 
