--- a/doc/03-Algorithm.tex
+++ b/doc/03-Algorithm.tex
@@ -286,8 +286,8 @@ For the $(13 \times 8)$ (iii) Gilbert curve, a Hamiltonian path is not possible 
 \end{figure}
 
 
-The concept of a $U$-split is extended to 3D by constructing a $J$-split.
-An exploded view of a $J$-split, the $J_0$ split, is shown in Figure \ref{fig:gilbert3DJSplit}.
+The concept of a $U$-split is extended to 3D by constructing a $J$-split shape templates.
+An exploded view of the $J_0$ shape template is shown in Figure \ref{fig:gilbert3DJSplit}.
 
 As discussed in section 3.1, we consider $p \in \mathbb{Z}^3$ to be the local origin point in the cuboid with
 $\alpha, \beta, \gamma \in \mathbb{Z}^3$ to be the local basis whose lengths encode the size of the cuboid.
@@ -348,7 +348,7 @@ path be possible through the cuboid region.
 Should a Hamiltonian path not be possible, all but one sub-cuboid regions are chosen to allow a Hamiltonian
 path.
 The sub-cuboid where a Hamiltonian path is not possible will be further subdivided as necessary, recursively
-ensuring that the infeasiblie Hamiltonian path region will eventually be resolved at a single point.
+ensuring that the infeasible Hamiltonian path region will eventually be resolved at a single point.
 
 When considering a cuboid region to trace out a Gilbert curve on, there are conceptually three main guides:
 
@@ -480,12 +480,36 @@ A constant of $\frac{1}{3}$ is chosen to split the ``height-like'' dimensions fo
 while the other split is chosen at the halfway mark.
 The calculations showing that the constants chosen yield a defect reduction in each of the three eccentric $S$-splits is provided in Appendix \ref{appendix:defect}.
 
-\subsection{Discussion}
+\subsection{Extensions \textbf{d2xyz} and \textbf{xyz2d}}
+
+To provide an index to point lookup or to convert a point to an index along the curve,
+Algorithm \ref{alg:gilbert2d} and Algorithm \ref{alg:gilbert3d} can be modified.
+Since the recursion is on cuboid regions, we can adjust an index or point easily
+by skipping over the appropriate number of cells.
+
+%We use the convetion \textbf{d2xyz} to indicate the index to point lookup function.
+A function to convert from an index along the Gilbert curve to a point in space is provided as \textit{Gilbert2D\_d2xyz} in Appendix \ref{alg:gilbert2d_d2xyz}.
+A destination and current index is added to the function call, where the destination index is tested
+against the current updated index to test whether it should fall into the recursion.
+Otherwise, cuboid regions are skipped without processing, providing an $O( \log N )$ worst case run time.
+
+A similar function to convert from a point in space to an index along the curve is called \textit{Gilbert2D\_xyz2d} and is provided in Appendix \ref{alg:gilbert2d_xyz2d}.
+\textit{Gilbert2D\_xyz2d} functions similarly to \textit{Gilbert2D\_d2xyz} but instead uses a current test point, $q$, to
+test whether the recursion is within the cuboid bounds and, if so, recurs.
+As with the \textit{Gilbert2D\_d2xyz}, \textit{Gilbert2D\_xyz2d} provides a worst case execution of
+$O( \log N )$ for point to index lookups.
+
+For the sake of brevity, the \textbf{xyz2d} and \textbf{d2xyz} functions are not provided for 3D but the reader is referred to
+the reference implementation for details \footnote{ https://github.com/jakubcerveny/gilbert }.
+
+\subsection{Adaptive Extensions}
 
 Applications that require a strict Hamiltonian path without a notch point, but are unconstrained in endpoint location, can choose
 endpoints on the even length dimension so that a Gilbert curve with a Hamiltonian path realization is possible.
 Other options can include increasing one or more length dimensions with padding to make the major width-like axis ($\alpha$) even or
 by forcing all length dimensions to be odd.
+
+\subsection{Corner Cases, Pathological Cases}
 
 For the special case when dimensions are of the form $((2k+1),2)$, for $k \in \mathbb{N}$, the Gilbert curve realization will
 not have the ending point of the path at the appropriate location.
